@@ -28,7 +28,7 @@ fi
 tmplang=${LC_CTYPE:-${LANG:-"en_US.UTF-8"}}
 
 # unset env vars to be safe
-unset XIM XIM_PROGRAM XIM_ARGS XMODIFIERS GTK_IM_MODULE QT_IM_MODULE
+unset XIM XIM_PROGRAM XIM_ARGS XMODIFIERS GTK_IM_MODULE QT_IM_MODULE AUXILIARY_PROGRAM AUXILIARY_ARGS
 
 [ -z "$IM_CHOOSER_DISABLE_USER_XINPUTRC" ] && IM_CHOOSER_DISABLE_USER_XINPUTRC=no
 
@@ -53,3 +53,6 @@ echo $GTK_IM_MODULE
 # execute XIM_PROGRAM
 [ -z "$IM_CHOOSER_ONLY_EVALUATE_VARIABLES" ] && IM_CHOOSER_ONLY_EVALUATE_VARIABLES=no
 [ -n "$XIM_PROGRAM" -a "x$IM_CHOOSER_ONLY_EVALUATE_VARIABLES" = "xno" ] && which "$XIM_PROGRAM" > /dev/null 2>&1 && LANG="$tmplang" "$XIM_PROGRAM" $XIM_ARGS &
+
+# execute AUXILIARY_PROGRAM
+[ -n "$AUXILIARY_PROGRAM" ] && WHICH "$AUXILIARY_PROGRAM" > /dev/null 2>&1 && LANG="$tmplang" "$AUXILIARY_PROGRAM" $AUXILIARY_ARGS &
